...
                verticalArrangement = Arrangement.Center
            ) {
                IconButton(onClick = it.onClick) {
                    Icon(
                        it.icon,
                        stringResource(id = R.string.app_bottom_bar_item_description),
                        modifier = Modifier.testTag("bottomAppBarLabel")
                    )
                }
                if (it is BottomAppBarItem.BottomAppBarItemWithLabel) {
                    Text(it.label)
                }
            }
...
        navigationIcon = {
            if (canNavigateBack) {
                IconButton(onClick = navigateUp) {
                    Icon(
                        imageVector = Icons.Filled.ArrowBack,
                        contentDescription = stringResource(R.string.app_top_bar_back_arrow_description),
                        modifier = Modifier.testTag("backArrow")
                    )
                }
            }
        },
        actions = {
            if (showActionsMenu) {
...
