...
                                    },
                                    navigateToFavorites = navigateToFavorites,
                                    team = it,
                                    isAdded = favoriteTeamsIds.contains(it.id),
                                    modifier = modifier
                                        .padding(12.dp, 24.dp)
                                        .testTag("teamCard")
                                )
                            }
                        }
                    } else {
                        TeamsGrid(
                            teams = teams,
...
                ) {
                IconButton(onClick = {
                    if (!isAdded) {
                        addToFavorite()
                        navigateToFavorites()
                    }
                }, modifier = Modifier.testTag("starIcon")) {
                    Icon(
                        imageVector = if (isAdded) Icons.Filled.Star else Icons.TwoTone.Star,
                        contentDescription = stringResource(R.string.teams_favorite_icon),
                    )
                }
            }
...
