...

            items(playerStats) {
                PlayerCard(
                    playerData = it,
                    modifier = Modifier
                        .padding(vertical = 24.dp)
                        .testTag("playerCard")
                )
            }
        }
    } else {
        LazyVerticalGrid(
            columns = GridCells.Fixed(2), modifier = Modifier
...
